
    - Fix use of VariantDir when the -n option is used and doesn't,
      therefore, actually create the variant directory.

    - Fix a stack trace from the --debug=includes option when passed a
      static or shared library as an argument.

    - Speed up the internal find_file() function (used for searching
      CPPPATH, LIBPATH, etc.).

  From Rob Managan:

    - Scan for TeX files in the paths specified in the $TEXINPUTS
      construction variable and the $TEXINPUTS environment variable.

    - Configure the PDF() and PostScript() Builders as single_source so
      they know each source file generates a separate target file.

    - Add $EPSTOPDF, $EPSTOPDFFLAGS and $EPSTOPDFCOM

    - Add .tex as a valid extension for the PDF() builder.

    - Add regular expressions to find \input, \include and
      \includegraphics.

    - Support generating a .pdf file from a .eps source.

    - Recursive scan included input TeX files.

  From Greg Noel:

    - Make the Action() function handle positional parameters consistently.

  From Randall Spangler:

    - Fix Glob() so an on-disk file or directory beginning with '#'
      doesn't throw an exception.



RELEASE 1.1.0 - Thu, 09 Oct 2008 08:33:47 -0700

  From Chris AtLee

    - Use the specified environment when checking for the GCC compiler
      version.

  From Ian P. Cardenas:

    - Fix Glob() polluting LIBPATH by returning copy of list

  From David Cournapeau:

    - Add CheckCC, CheckCXX, CheckSHCC and CheckSHCXX tests to
      configuration contexts.

    - Have the --profile= argument use the much faster cProfile module 
      (if it's available in the running Python version).

    - Reorder MSVC compilation arguments so the /Fo is first.

  From Bill Deegan:

    - Add scanning Windows resource (.rc) files for implicit dependencies.

  From John Gozde:

    - When scanning for a #include file, don't use a directory that
      has the same name as the file.

  From Ralf W. Grosse-Kunstleve
